[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Actors/StoryTerminal.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 256, 47.5 )

[sub_resource type="Animation" id=2]
resource_name = "Open"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("StoryUI:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -440 ), Vector2( -160, -480 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StoryUI:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("StoryUI:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -96, -328 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StoryUI:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="StoryTerminal" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="TerminalSprite" type="Sprite" parent="."]
position = Vector2( 0, -128.25 )
scale = Vector2( 1, 3.99219 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -47.5 )
shape = SubResource( 1 )

[node name="StoryUI" type="Control" parent="."]
visible = false
margin_left = -96.0
margin_top = -328.0
margin_right = 224.0
margin_bottom = -144.0

[node name="Background" type="ColorRect" parent="StoryUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0, 0, 0.117647, 0.733333 )

[node name="StoryText" type="Label" parent="StoryUI"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Open = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_StoryTerminal_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_StoryTerminal_body_exited"]
